# PiHome

./: .gitignore  README.md
PiHome/: PiHome.sln  autostart.txt  install.txt  piapi.service
PiHome/Ambilight/: Ambilight.csproj  App.axaml  App.axaml.cs
PiHome/Ambilight.Desktop/: Ambilight.Desktop.csproj  Program.cs
PiHome/Ambilight/ScreenReader/: ScreenReader.cs
PiHome/Ambilight/ViewModels/: MainViewModel.cs  ViewModelBase.cs
PiHome/Ambilight/Views/: MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
PiHome/Communication/: Communication.csproj
PiHome/Communication/ApiCommunication/: BaseCommunicator.cs  CommunicatorFactory.cs  DataCommunicator.cs  LedCommunicator.cs  SensorCommunicator.cs
PiHome/Communication/Networking/: BroadcastConnector.cs  INetworkConnector.cs  MasterNetworker.cs  MulticastConnector.cs
PiHome/Communication/Types/: AnalogValue.cs  Environment.cs  Status.cs
PiHome/Coordinator/: Coordinator.csproj
PiHome/Coordinator/Modules/: ExtendedModule.cs  LedController.cs  ModuleController.cs
PiHome/DB/: CreateScript.sql
PiHome/DataPersistance/: DataPersistance.csproj  DbFactory.cs  Generator.txt
PiHome/KWin-Ambilight/: CMakeLists.txt  main.cpp
PiHome/KWin-Ambilight/desktop/: kwin-ambilight.desktop
PiHome/PiApi/: PiApi.pyproj  requirements.txt  runserver.py
PiHome/PiUi/: PiUi.csproj  Program.cs  Startup.cs
PiHome/SecreenCapture.NET.LinuxFramebuffer/: FrambufferCaptureService.cs  FrameBufferCaptureZone.cs  FramebufferScreenCapture.cs  SecreenCapture.NET.LinuxFramebuffer.csproj
(+67 files in other folders)
